# stm32-template

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/main/: app_main.c  app_main.h
toolchain/: compiler_flags.cmake  toolchain-arm-gcc.cmake
